# form-autofill

./: README.md  autofill_flow.py  dotraining.py  form_context.py  form_context_flow.py  pyproject.toml  testing-supported.txt  training-supported.txt  validation-supported.txt
common/: secrets.py
data/common_crawl/: CC_1001spelletjes_373a56c9.html  CC_1105reg_9488de35.html  CC_13sims_f3b1bd52.html  CC_2express_63fe0ec6.html  CC_abzu2_02662.html  CC_academicimpressi_64821334.html  CC_acconsento_31fb8c48.html  CC_accounts_f4cdfb08.html  CC_acs_056d2c5a.html  CC_activenetwork_ce4a4c88.html  CC_aepd_02012.html  CC_aepd_02014.html  CC_aepd_0faed876.html  CC_aibi_3613ae08.html  CC_aibi_ed113d62.html  CC_albertsonscompan_a9c7bedb.html  CC_allacespace_94997513.html  CC_almereaannemer_0336af3e.html  CC_ambientemareital_02c0266a.html  CC_amtrak_8c3e4368.html  CC_angelcosmetics_54ee41b8.html  CC_archive_00220.html  CC_archive_f5771592.html  CC_ariesfriendsdate_00006.html  CC_ariesfriendsdate_00007.html  CC_ariesfriendsdate_77e09031.html  CC_ariesfriendsdate_7f160d1c.html  CC_articolo21_01524.html  CC_asos_7db6c0dd.html  CC_assetresourcing_7c61bdb8.html  CC_assets_02096.html  CC_assets_73c5de00.html  (+2034 more)
data_tools/: README.md  compare_field_accuracy.py  eval_quantized.py  evaluate_labels.py  extract_forms.py  extract_non_address.py  generate_samples.py  label_common_crawl.py
onnx/: export_onnx.py  extract_model.py  quantize_and_eval.sh
processed_datasets/: training-supported-addrfix.txt  validation-supported-addrfix.txt  validation-supported_addrline1_no_line2.csv
(+1144 files in other folders)
